# mimic-vid_gb_ap

./: .gitmodules  ACKNOWLEDGEMENTS  COPYING  meson.build
src/: vid_gb_ap.c  vid_gb_ap_cg.c  vid_gb_ap_plugin.c
subprojects/: mimic-english.wrap
